[tool.poetry]
name = "boto-zenduty"
version = "0.1.0"
description = ""
authors = ["Lisa-Stats"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
boto3 = "^1.34.88"
botocore = "^1.34.88"
bottle = "^0.12.25"
python-dotenv = "^1.0.1"
requests = "^2.31.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
